<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:background="@drawable/editsharp2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/BlueBase_tv4"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sdialog_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="22dp"
        android:text="@string/startActivity_tab_tv1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sdialog_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="22dp"
        android:text="@string/startActivity_tab_tv2"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sdialog_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="22dp"
        android:text="@string/startActivity_tab_tv3"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sdialog_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="22dp"
        android:text="@string/startActivity_tab_tv4"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>