<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="20dp">


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_open_camera"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:text="@string/BlueBase_tv5"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:qmui_backgroundColor="@color/green3"
        app:qmui_borderColor="@color/green3"
        app:qmui_radiusBottomLeft="7dp"
        app:qmui_radiusBottomRight="7dp"
        app:qmui_radiusTopLeft="7dp"
        app:qmui_radiusTopRight="7dp" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_choose_img"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/BlueBase_tv6"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:qmui_backgroundColor="@color/green3"
        app:qmui_borderColor="@color/green3"
        app:qmui_radiusBottomLeft="7dp"
        app:qmui_radiusBottomRight="7dp"
        app:qmui_radiusTopLeft="7dp"
        app:qmui_radiusTopRight="7dp" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/BlueBase_tv7"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:qmui_backgroundColor="@color/darkblue"
        app:qmui_borderColor="@color/darkblue"
        app:qmui_radiusBottomLeft="7dp"
        app:qmui_radiusBottomRight="7dp"
        app:qmui_radiusTopLeft="7dp"
        app:qmui_radiusTopRight="7dp" />
</LinearLayout>