<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/l_background"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="100dp"
        android:elevation="3dp"
        android:src="@mipmap/icon_name_loading" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/ll_down"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginActivity_tv13"
            android:textColor="@color/white"
            android:textSize="16.34sp" />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginActivity_tv12"
            android:textColor="@color/white"
            android:textSize="16.34sp" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/LoginActivity_tv11"
            android:onClick="downloadFile"
            android:textColor="@color/white"
            android:textSize="16.34sp"
            app:qmui_borderColor="@color/white"
            app:qmui_radiusBottomLeft="5dp"
            app:qmui_radiusBottomRight="5dp"
            app:qmui_radiusTopLeft="5dp"
            app:qmui_radiusTopRight="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:text="天麒科技"
        android:textColor="@color/white"
        android:textSize="13.1sp" />
</FrameLayout>