<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="10dp"
    android:background="@drawable/editsharp2"
    android:orientation="vertical">

    <com.skylin.uav.drawforterrain.views.ViewPager
        android:id="@+id/viewpager_dot"
        android:layout_width="wrap_content"
        android:layout_height="108.93dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_boundary"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_boundary"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/DotActivity_tv4"
                android:textColor="@color/green3"
                android:textSize="15.25sp" />

            <View
                android:id="@+id/group_boundary"
                android:layout_width="60dp"
                android:layout_height="3px"
                android:layout_marginTop="5dp"
                android:background="@color/green3" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_obstacle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_obstacle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/DotActivity_tv5"
                android:textColor="@color/text_gray3"
                android:textSize="15.25sp" />

            <View
                android:id="@+id/group_obstacle"
                android:layout_width="60dp"
                android:layout_height="3px"
                android:layout_marginTop="5dp"
                android:background="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/record_point"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/DotActivity_tv6"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:qmui_backgroundColor="@color/green3"
        app:qmui_borderColor="@color/green3"
        app:qmui_radiusBottomLeft="5dp"
        app:qmui_radiusBottomRight="5dp" />
</LinearLayout>
