<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="217.86dp"
    android:layout_gravity="bottom"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/editsharp2"
    android:elevation="3dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <com.skylin.uav.drawforterrain.views.MarqueeTextView

                android:id="@+id/area_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="top|center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="0.00"
                android:textColor="@color/green3"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DotActivity_tv11"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/details_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginTop="41dp"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <FrameLayout
                android:id="@+id/sync_detail"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="top|right"
                android:background="@mipmap/icon_tri">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/recordadapter_tv3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/details_back"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/DotActivity_tv12"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:qmui_backgroundColor="@color/darkblue1"
            app:qmui_borderColor="@color/darkblue1"
            app:qmui_radiusBottomLeft="5dp" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/details_options"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/DotActivity_tv13"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:qmui_backgroundColor="@color/green3"
            app:qmui_borderColor="@color/green3"
            app:qmui_radiusBottomRight="5dp" />
    </LinearLayout>
</LinearLayout>